add actual social links

--- a/index.html
+++ b/index.html
@@ -25,11 +25,41 @@
         <!-- yellow color, smaller -->
         <span class="tagline">"Full Stack Web Developer and Photographer"</span>
         <!-- then 5 social links buttons -->
-        <button type="button" class="social-link" href="">GitHub</button>
-        <button type="button" class="social-link">Frontend Mentor</button>
-        <button type="button" class="social-link">LinkedIn</button>
-        <button type="button" class="social-link">Facebook</button>
-        <button type="button" class="social-link">Instagram</button>
+        <button
+          type="button"
+          class="social-link"
+          href="https://github.com/flyboy85749"
+        >
+          GitHub
+        </button>
+        <button
+          type="button"
+          class="social-link"
+          href="https://www.frontendmentor.io/profile/flyboy85749"
+        >
+          Frontend Mentor
+        </button>
+        <button
+          type="button"
+          class="social-link"
+          href="https://www.linkedin.com/in/william-hall-086040188/"
+        >
+          LinkedIn
+        </button>
+        <button
+          type="button"
+          class="social-link"
+          href="https://www.facebook.com/ChristianCoderBill/"
+        >
+          Facebook
+        </button>
+        <button
+          type="button"
+          class="social-link"
+          href="https://www.instagram.com/flyboy85705/"
+        >
+          Instagram
+        </button>
       </div>
 
       <div class="attribution">
