change buttons to a links

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
-    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="./main.css" />
     <link
       rel="icon"
       type="image/png"
@@ -25,41 +25,41 @@
         <!-- yellow color, smaller -->
         <span class="tagline">"Full Stack Web Developer and Photographer"</span>
         <!-- then 5 social links buttons -->
-        <button
+        <a
           type="button"
-          class="social-link"
+          class="social-link button"
           href="https://github.com/flyboy85749"
         >
           GitHub
-        </button>
-        <button
+        </a>
+        <a
           type="button"
-          class="social-link"
+          class="social-link button"
           href="https://www.frontendmentor.io/profile/flyboy85749"
         >
           Frontend Mentor
-        </button>
-        <button
+        </a>
+        <a
           type="button"
-          class="social-link"
+          class="social-link button"
           href="https://www.linkedin.com/in/william-hall-086040188/"
         >
           LinkedIn
-        </button>
-        <button
+        </a>
+        <a
           type="button"
-          class="social-link"
+          class="social-link button"
           href="https://www.facebook.com/ChristianCoderBill/"
         >
           Facebook
-        </button>
-        <button
+        </a>
+        <a
           type="button"
-          class="social-link"
+          class="social-link button"
           href="https://www.instagram.com/flyboy85705/"
         >
           Instagram
-        </button>
+        </a>
       </div>
 
       <div class="attribution">
